--- a/shapes/pathshapes/spiral/SpiralShapeConfigWidget.ui
+++ b/shapes/pathshapes/spiral/SpiralShapeConfigWidget.ui
@@ -55,6 +55,16 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Direction:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" >
+       <widget class="QComboBox" name="clockWise" />
+      </item>
      </layout>
     </widget>
    </item>
