--- a/kword/part/dialogs/KWFrameGeometry.ui
+++ b/kword/part/dialogs/KWFrameGeometry.ui
@@ -37,7 +37,7 @@
        <widget class="KoUnitDoubleSpinBox" name="xPos" />
       </item>
       <item rowspan="2" row="0" column="2" colspan="2" >
-       <widget class="KWPositionSelector" native="1" name="positionSelector" >
+       <widget class="KoPositionSelector" native="1" name="positionSelector" >
         <property name="sizePolicy" >
          <sizepolicy vsizetype="Preferred" hsizetype="Expanding" >
           <horstretch>0</horstretch>
@@ -224,9 +224,9 @@
    <header>KoUnitDoubleSpinBox.h</header>
   </customwidget>
   <customwidget>
-   <class>KWPositionSelector</class>
+   <class>KoPositionSelector</class>
    <extends>QWidget</extends>
-   <header>dialogs/KWPositionSelector.h</header>
+   <header>KoPositionSelector.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
