Move the default tool to live as a plugin. This enables us to use classes from the guiutil lib in the default tool.

--- a/plugins/defaultTools/defaulttool/DefaultToolWidget.ui
+++ b/plugins/defaultTools/defaulttool/DefaultToolWidget.ui
@@ -1,6 +1,6 @@
 <ui version="4.0" >
- <class>KoInteractionToolWidget</class>
- <widget class="QTabWidget" name="KoInteractionToolWidget" >
+ <class>DefaultToolWidget</class>
+ <widget class="QTabWidget" name="DefaultToolWidget" >
   <property name="geometry" >
    <rect>
     <x>0</x>
